[tool.poetry]
name = "freemarket"
version = "0.1.0"
description = ""
authors = ["Martín Herrán <martin.herran@inceptia.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.1"}

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ipython = "^8.21.0"
isort = "^5.13.2"
pyright = "^1.1.349"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"

[tool.isort]
profile = "black"
multi_line_output = 7
force_single_line = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
